--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     input, textarea, select { width: 100%; padding: 0.5rem; margin-top: 0.3rem; }
     button { margin-top: 2rem; padding: 0.7rem 1.5rem; font-size: 1rem; }
     .section { margin-bottom: 2rem; border-bottom: 1px solid #ccc; padding-bottom: 1rem; background: #fff; padding: 1rem; border-radius: 5px; }
+    .note { font-style: italic; font-size: 0.9rem; color: #555; margin-top: 0.2rem; }
   </style>
 </head>
 <body>
@@ -39,44 +40,52 @@
     </div>
 
     <div class="section">
-      <label>1. Site Setup (describe protection needed, access issues, skip/toilet needs)</label>
+      <label>1. Site Setup (access, protection, skip, toilet)</label>
       <textarea name="siteSetup" rows="3"></textarea>
+      <p class="note">Suggested cost: £500–£1,200</p>
 
       <label>2. Groundworks & Foundations (depth, trench size, concrete volume)</label>
       <textarea name="groundworks" rows="3"></textarea>
+      <p class="note">Suggested cost: £2,500–£6,000</p>
 
-      <label>3. Substructure / Floor System (block & beam, slab type, insulation)</label>
-      <textarea name="substructure" rows="3"></textarea>
-
-      <label>4. Cavity Brickwork (block size, insulation type, DPC details)</label>
+      <label>3. Cavity Brickwork (wall size, insulation type, DPC)</label>
       <textarea name="brickwork" rows="3"></textarea>
+      <p class="note">Suggested cost: £3,500–£6,500</p>
 
-      <label>5. Steel Beam / Knock-Through (RSJ size, padstones, propping method)</label>
+      <label>4. Steel Beam / Knock-Through (beam size, propping, padstones)</label>
       <textarea name="steelBeam" rows="3"></textarea>
+      <p class="note">Suggested cost: £1,800–£2,500</p>
 
-      <label>6. Roofing (type, pitch, finish, insulation, Siltec/membrane if used)</label>
+      <label>5. Roof Structure & Covering (type, membrane, insulation)</label>
       <textarea name="roofing" rows="3"></textarea>
+      <p class="note">Suggested cost: £3,000–£6,000</p>
 
-      <label>7. Rooflights / Flashing (how many, size, lead/flashing type)</label>
+      <label>6. Rooflights & Flashing (number, style, lead work)</label>
       <textarea name="rooflights" rows="2"></textarea>
+      <p class="note">Suggested cost: £500–£1,500</p>
 
-      <label>8. Windows & External Doors (supply or client-supplied? sizes?)</label>
+      <label>7. Windows & External Doors (supply/install, sizes)</label>
       <textarea name="windows" rows="2"></textarea>
+      <p class="note">Suggested cost: £800–£2,500</p>
 
-      <label>9. Rendering & Plastering (internal/external areas, silicone or sand/cement)</label>
+      <label>8. Rendering & Plastering (internal, external, coving)</label>
       <textarea name="plastering" rows="3"></textarea>
+      <p class="note">Suggested cost: £1,500–£3,500</p>
 
-      <label>10. Electrics & Plumbing (client electrician or in-house? any rerouting?)</label>
+      <label>9. Electrics & Plumbing (layout, reroutes, new fittings)</label>
       <textarea name="services" rows="3"></textarea>
+      <p class="note">Suggested cost: £1,500–£4,000</p>
 
-      <label>11. Waste & Final Clean (number of skips needed, rubble volume)</label>
+      <label>10. Waste & Final Clean (skips, labour, rubble volume)</label>
       <textarea name="waste" rows="2"></textarea>
+      <p class="note">Suggested cost: £700–£1,500</p>
 
-      <label>12. Other Notes (client preferences, site risks, extra works)</label>
+      <label>11. Optional Add-ons or Notes (e.g. decking, landscaping, external render)</label>
       <textarea name="notes" rows="3"></textarea>
+      <p class="note">Optional – cost depends on scope</p>
     </div>
 
-    <button type="submit">Download PDF</button>
+    <button type="submit">Save Project as PDF</button>
   </form>
 
   <script>
@@ -95,7 +104,7 @@
       const client = data.get('clientName') || 'Client';
       const address = data.get('projectAddress')?.split('\n')[0] || 'Project';
       const date = new Date().toISOString().split('T')[0];
-      const filename = `${client.trim().replace(/\s+/g, '_')}_${address.trim().replace(/\s+/g, '_')}_${date}.pdf`;
+      const filename = `${address.trim().replace(/\s+/g, '_')}_${client.trim().replace(/\s+/g, '_')}_${date}.pdf`;
 
       const blob = new Blob([content], { type: 'application/pdf' });
       const url = URL.createObjectURL(blob);
